<resources>
    <string name="C1">A=Abidjan|Africa/Abidjan</string>
    <string name="C10">D=Dakar|Africa/Dakar</string>
    <string name="C100">A=Amman|Asia/Amman</string>
    <string name="C101">A=Anadyr|Asia/Anadyr</string>
    <string name="C102">A=Aqtau|Asia/Aqtau</string>
    <string name="C103">B=Baghdad|Asia/Baghdad</string>
    <string name="C104">B=Bahrain|Asia/Bahrain</string>
    <string name="C105">B=Baku|Asia/Baku</string>
    <string name="C106">B=Bangkok|Asia/Bangkok</string>
    <string name="C107">B=Beirut|Asia/Beirut</string>
    <string name="C108">K=Kolkata|Asia/Calcutta</string>
    <string name="C109">D=Damascus|Asia/Damascus</string>
    <string name="C11">D=Dar es Salaam|Africa/Dar_es_Salaam</string>
    <string name="C110">D=Dhaka|Asia/Dhaka</string>
    <string name="C111">D=Dubai|Asia/Dubai</string>
    <string name="C112">G=Gaza|Asia/Gaza</string>
    <string name="C113">H=Hebron|Asia/Hebron</string>
    <string name="C114">H=Ho Chi Minh|Asia/Ho_Chi_Minh</string>
    <string name="C115">H=Hong Kong:|Asia/Hong_Kong</string>
    <string name="C117">J=Jakarta|Asia/Jakarta</string>
    <string name="C118">J=Jerusalem|Asia/Jerusalem</string>
    <string name="C119">K=Kabul|Asia/Kabul</string>
    <string name="C12">D=Djibouti|Africa/Djibouti</string>
    <string name="C120">K=Karachi|Asia/Karachi</string>
    <string name="C121">K=Kathmandu|Asia/Kathmandu</string>
    <string name="C122">K=Kuala Lumpur|Asia/Kuala_Lumpur</string>
    <string name="C123">K=Kuwait|Asia/Kuwait</string>
    <string name="C124">M=Macau|Asia/Macau</string>
    <string name="C125">M=Manila|Asia/Manila</string>
    <string name="C126">M=Muscat|Asia/Muscat</string>
    <string name="C127">P=Phnom Penh|Asia/Phnom_Penh</string>
    <string name="C128">P=Pyongyang:|Asia/Pyongyang</string>
    <string name="C13">F=Freetown|Africa/Freetown</string>
    <string name="C130">R=Rangoon|Asia/Rangoon</string>
    <string name="C131">R=Riyadh|Asia/Riyadh</string>
    <string name="C133">S=Seoul|Asia/Seoul</string>
    <string name="C134">S=Shanghai:|Asia/Shanghai</string>
    <string name="C135">S=Singapore|Asia/Singapore</string>
    <string name="C136">T=Taipei:|Asia/Taipei</string>
    <string name="C137">T=Tehran|Asia/Tehran</string>
    <string name="C138">T=Tel Aviv|Asia/Tel_Aviv</string>
    <string name="C139">T=Tokyo:|Asia/Tokyo</string>
    <string name="C14">G=Gaborone|Africa/Gaborone</string>
    <string name="C140">U=Ulaanbaatar|Asia/Ulaanbaatar</string>
    <string name="C141">B=Bermuda|Atlantic/Bermuda</string>
    <string name="C142">C=Canary|Atlantic/Canary</string>
    <string name="C143">C=Cape Verde|Atlantic/Cape_Verde</string>
    <string name="C144">R=Reykjavik|Atlantic/Reykjavik</string>
    <string name="C145">S=Stanley|Atlantic/Stanley</string>
    <string name="C146">A=Adelaide|Australia/Adelaide</string>
    <string name="C147">B=Brisbane|Australia/Brisbane</string>
    <string name="C148">C=Canberra|Australia/Canberra</string>
    <string name="C149">D=Darwin|Australia/Darwin</string>
    <string name="C15">H=Harare|Africa/Harare</string>
    <string name="C150">M=Melbourne|Australia/Melbourne</string>
    <string name="C151">N=New South Wales|Australia/NSW</string>
    <string name="C152">P=Perth|Australia/Perth</string>
    <string name="C153">Q=Queensland|Australia/Queensland</string>
    <string name="C154">S=Sydney|Australia/Sydney</string>
    <string name="C155">V=Victoria|Australia/Victoria</string>
    <string name="C156">N=Newfoundland|Canada/Newfoundland</string>
    <string name="C157">S=Saskatchewan|Canada/Saskatchewan</string>
    <string name="C158">E=Easter Island|Chile/EasterIsland</string>
    <string name="C159">A=Amsterdam|Europe/Amsterdam</string>
    <string name="C16">J=Johannesburg|Africa/Johannesburg</string>
    <string name="C160">A=Andorra|Europe/Andorra</string>
    <string name="C161">A=Athens|Europe/Athens</string>
    <string name="C162">B=Belfast|Europe/Belfast</string>
    <string name="C163">B=Belgrade|Europe/Belgrade</string>
    <string name="C164">B=Berlin|Europe/Berlin</string>
    <string name="C165">B=Bratislava|Europe/Bratislava</string>
    <string name="C166">B=Brussels|Europe/Brussels</string>
    <string name="C167">B=Bucharest|Europe/Bucharest</string>
    <string name="C168">B=Budapest|Europe/Budapest</string>
    <string name="C169">C=Chisinau|Europe/Chisinau</string>
    <string name="C17">K=Kampala|Africa/Kampala</string>
    <string name="C170">C=Copenhagen|Europe/Copenhagen</string>
    <string name="C171">D=Dublin|Europe/Dublin</string>
    <string name="C172">G=Gibraltar|Europe/Gibraltar</string>
    <string name="C173">H=Helsinki|Europe/Helsinki</string>
    <string name="C174">I=Isle of Man|Europe/Isle_of_Man</string>
    <string name="C175">I=Istanbul|Europe/Istanbul</string>
    <string name="C176">K=Kiev|Europe/Kiev</string>
    <string name="C177">L=Lisbon|Europe/Lisbon</string>
    <string name="C178">L=London|Europe/London</string>
    <string name="C179">L=Luxembourg|Europe/Luxembourg</string>
    <string name="C18">K=Khartoum|Africa/Khartoum</string>
    <string name="C180">M=Madrid|Europe/Madrid</string>
    <string name="C181">M=Malta|Europe/Malta</string>
    <string name="C182">M=Minsk|Europe/Minsk</string>
    <string name="C183">M=Monaco|Europe/Monaco</string>
    <string name="C184">M=Moscow|Europe/Moscow</string>
    <string name="C185">O=Oslo|Europe/Oslo</string>
    <string name="C186">P=Paris|Europe/Paris</string>
    <string name="C187">P=Prague|Europe/Prague</string>
    <string name="C188">R=Riga|Europe/Riga</string>
    <string name="C189">R=Rome|Europe/Rome</string>
    <string name="C19">K=Kigali|Africa/Kigali</string>
    <string name="C190">S=San Marino|Europe/San_Marino</string>
    <string name="C191">S=Sarajevo|Europe/Sarajevo</string>
    <string name="C192">S=Simferopol|Europe/Simferopol</string>
    <string name="C193">S=Skopje|Europe/Skopje</string>
    <string name="C194">S=Sofia|Europe/Sofia</string>
    <string name="C195">S=Stockholm|Europe/Stockholm</string>
    <string name="C196">T=Tallinn|Europe/Tallinn</string>
    <string name="C197">V=Vatican|Europe/Vatican</string>
    <string name="C198">V=Vienna|Europe/Vienna</string>
    <string name="C199">V=Vilnius|Europe/Vilnius</string>
    <string name="C2">A=Accra|Africa/Accra</string>
    <string name="C20">K=Kinshasa|Africa/Kinshasa</string>
    <string name="C200">W=Warsaw|Europe/Warsaw</string>
    <string name="C201">Z=Zagreb|Europe/Zagreb</string>
    <string name="C202">Z=Zurich|Europe/Zurich</string>
    <string name="C203">A=Antananarivo|Indian/Antananarivo</string>
    <string name="C204">M=Maldives|Indian/Maldives</string>
    <string name="C205">M=Mauritius|Indian/Mauritius</string>
    <string name="C206">A=Auckland|Pacific/Auckland</string>
    <string name="C207">F=Fiji|Pacific/Fiji</string>
    <string name="C208">G=Guam|Pacific/Guam</string>
    <string name="C209">H=Honolulu|Pacific/Honolulu</string>
    <string name="C21">L=Lagos|Africa/Lagos</string>
    <string name="C210">K=Kiritimati|Pacific/Kiritimati</string>
    <string name="C211">N=Noumea|Pacific/Noumea</string>
    <string name="C214">A=Antigua|America/Antigua</string>
    <string name="C215">A=Austin|America/Chicago</string>
    <string name="C216">B=Boston|America/New_York</string>
    <string name="C217">C=Calgary|America/Denver</string>
    <string name="C218">C=Columbus|America/New_York</string>
    <string name="C219">D=Dallas|America/Chicago</string>
    <string name="C22">M=Maseru|Africa/Maseru</string>
    <string name="C220">K=Knoxville|America/New_York</string>
    <string name="C221">M=Memphis|America/Chicago</string>
    <string name="C222">M=Miami|America/New_York</string>
    <string name="C223">M=Minneapolis|America/Chicago</string>
    <string name="C224">O=Ottawa|America/New_York</string>
    <string name="C225">P=Philadelphia|America/New_York</string>
    <string name="C226">P=Portland|America/Los_Angeles</string>
    <string name="C227">S=San Diego|America/Los_Angeles</string>
    <string name="C228">S=San Francisco|America/Los_Angeles</string>
    <string name="C229">S=Salt Lake City|America/Denver</string>
    <string name="C23">M=Mogadishu|Africa/Mogadishu</string>
    <string name="C230">S=San Jose|America/Los_Angeles</string>
    <string name="C231">S=San Salvador|America/Guatemala</string>
    <string name="C232">S=Seattle|America/Los_Angeles</string>
    <string name="C233">S=St. Louis|America/Chicago</string>
    <string name="C234">W=Washington D.C.|America/New_York</string>
    <string name="C235">H=Houston|America/Chicago</string>
    <string name="C236">S=San Antonio|America/Chicago</string>
    <string name="C237">J=Jacksonville|America/New_York</string>
    <string name="C238">B=Baltimore|America/New_York</string>
    <string name="C239">N=Nashville|America/Chicago</string>
    <string name="C24">N=Nairobi|Africa/Nairobi</string>
    <string name="C240">M=Milwaukee|America/Chicago</string>
    <string name="C241">O=Oklahoma City|America/Chicago</string>
    <string name="C242">L=Las Vegas|America/Los_Angeles</string>
    <string name="C243">A=Albuquerque|America/Denver</string>
    <string name="C244">T=Tucson|MST</string>
    <string name="C245">S=Sacramento|America/Los_Angeles</string>
    <string name="alarm_flip_setting">Flip setting</string>
    <string name="alarm_mute_ringing_switch">Ring on silent mode</string>
    <string name="alarm_settings">ALARMS</string>
    <string name="alarm_shutdown_ringing_switch">Ring when the phone is closed</string>
    <string name="alarm_vibe_switch">Vibration switch</string>
    <string name="alarm_volume_title">Alarm volume (Timer)</string>
    <string name="alert_remind_later">Snoozing</string>
    <string name="app_label">Clock</string>
    <string name="auto_silence_title">Silence after</string>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="clock_24_hours_format">kk:mm</string>
    <string name="clock_settings">CLOCK</string>
    <string name="clock_style">Style</string>
    <string name="close_alarm_notif">Dismiss</string>
    <string name="default_clock_style">digital</string>
    <string name="edit_alarm_cancel">Cancel</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="local">Local</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_sort_by_gmt_offset">Sort by time</string>
    <string name="mode_edit_name">点击编辑名称</string>
    <string name="number_picker_hour">H</string>
    <string name="number_picker_minute">M</string>
    <string name="number_picker_second">S</string>
    <string name="search_hint">City/Country</string>
    <string name="settings">Settings</string>
    <string name="snooze_duration_title">Snooze length</string>
    <string name="str_num">%1$d/5</string>
    <string name="timer_dialog_btn_cancel">Cancel</string>
    <string name="timer_dialog_btn_start">Start</string>
    <string name="timer_dialog_title">Set time</string>
    <string name="timer_picker_hour_unit">h</string>
    <string name="timer_picker_minute_unit">m</string>
    <string name="timer_picker_second_unit">s</string>
    <string name="timer_str_tolong_tip">字数超出限制范围</string>
    <string name="update_holiday_summary">Detect updates available on the holiday data</string>
    <string name="update_holiday_title">Update holiday data</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="world_clock_12_hours_format">h:mm <b><font face="sans-serif-condensed" size="14">a</font></b></string>
</resources>