<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_menu_search" android:id="@id/menu_item_search" android:orderInCategory="1" android:title="@android:string/search_go" android:imeOptions="actionSearch" android:showAsAction="ifRoom" android:actionViewClass="android.widget.SearchView" />
    <item android:id="@id/menu_item_sort" android:title="@string/menu_item_sort_by_gmt_offset" android:showAsAction="never" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/menu_item_settings" android:title="@string/menu_item_settings" android:showAsAction="never" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/menu_item_help" android:title="@string/menu_item_help" android:showAsAction="never" />
</menu>