<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/ed_content" android:background="@null" android:layout_width="fill_parent" android:layout_height="64.0dip" android:hint="@string/mode_edit_name" android:layout_centerHorizontal="true" android:inputType="textPersonName" android:layout_marginStart="24.0dip" android:layout_toStartOf="@id/vt_num_tip" />
    <TextView android:textColor="@color/timer_icon_color" android:id="@id/vt_num_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_num" android:layout_centerVertical="true" android:layout_marginEnd="24.0dip" android:layout_alignParentEnd="true" />
    <View android:id="@id/view_line" android:background="@color/timer_icon_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_below="@id/ed_content" />
    <TextView android:textColor="@color/timer_mode_edit_red" android:id="@id/vt_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/timer_str_tolong_tip" android:layout_below="@id/view_line" android:layout_marginStart="24.0dip" />
</RelativeLayout>