<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="17.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/clock_grid_city_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="伦敦" android:singleLine="true" />
    <com.motorola.cn.deskclock.widget.ClockPanelView android:id="@id/clock_panel_view" android:layout_width="@dimen/clock_widget_width" android:layout_height="@dimen/clock_widget_height" android:layout_marginTop="20.0dip" android:layout_below="@id/clock_grid_city_name" android:layout_centerHorizontal="true" app:oval_color="@color/world_panel_oval_color" app:semimajor_axis="@dimen/clock_widget_panel_oval_semimajor_axis" app:semiminor_axis="@dimen/clock_widget_panel_oval_semiminor_axis" />
    <com.motorola.cn.deskclock.worldclock.widget.ClockNeedleView android:id="@id/clock_needle_view" android:layout_width="@dimen/clock_widget_width" android:layout_height="@dimen/clock_widget_height" android:layout_marginTop="20.0dip" android:layout_below="@id/clock_grid_city_name" android:layout_centerHorizontal="true" app:hour_needle="@drawable/needle_hour" app:init_rotate_duration="566" app:init_rotate_interval="166" app:local_point_margin_line="@dimen/clock_widget_local_point_margin_line" app:local_point_radius="@dimen/clock_widget_local_point_radius" app:local_text="@string/local" app:local_text_color="@color/clock_widget_local_text_color" app:local_text_margin_point="@dimen/clock_widget_local_text_margin_point" app:local_text_size="@dimen/clock_widget_local_textsize" app:minute_needle="@drawable/needle_minute" app:second_needle="@drawable/needle_second" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/clock_grid_time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/clock_needle_view">
        <TextView android:id="@id/clock_grid_day_before" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="今天" android:singleLine="true" style="@style/item_clock_grid_day_before" />
        <TextView android:id="@id/clock_grid_ampm_cn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="上午" android:singleLine="true" style="@style/item_clock_grid_day_before" />
        <com.motorola.cn.deskclock.widget.TextClock android:textSize="30.0dip" android:textColor="@color/alarm_list_time_color" android:id="@id/clock_grid_digital_clock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/world_clock_12_hours_format" android:format24Hour="@string/clock_24_hours_format" style="@style/medium_light" />
        <TextView android:id="@id/clock_grid_ampm_en" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="PM" android:singleLine="true" style="@style/item_clock_grid_day_before" />
    </LinearLayout>
</RelativeLayout>