<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/list_search_layout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/list_search_hint_color" android:gravity="center_vertical" android:id="@id/search_view_hint" android:background="@drawable/shape_list_search_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/search_hint" android:drawablePadding="5.0dip" android:layout_centerVertical="true" android:drawableStart="@drawable/ic_search" android:paddingStart="20.0dip" android:paddingEnd="24.0dip" android:layout_marginStart="@dimen/common_left_right_margin" android:layout_marginEnd="@dimen/common_left_right_margin" android:layout_alignParentStart="true" />
    <RelativeLayout android:id="@id/rl_search" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/iv_search_view" android:paddingBottom="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_leading" android:layout_centerVertical="true" android:layout_marginStart="@dimen/common_left_right_margin" android:layout_marginEnd="@dimen/common_left_right_margin" android:layout_alignParentStart="true" />
        <EditText android:textSize="16.0sp" android:textColor="@color/list_search_text_color" android:textColorHint="@color/list_search_hint_color" android:gravity="start|center" android:id="@id/search_view" android:background="@null" android:paddingBottom="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/search_hint" android:singleLine="true" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/iv_search_view" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true" android:imeOptions="actionSearch" android:textCursorDrawable="@drawable/shape_search_edittext_cursor" android:paddingEnd="24.0dip" android:layout_marginEnd="@dimen/common_left_right_margin" />
        <TextView android:background="@color/line" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/search_view" />
    </RelativeLayout>
    <TextView android:textSize="15.0sp" android:textColor="@color/selector_cancel_search_text_color" android:id="@id/textView_cancel" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_alarm_cancel" android:layout_centerVertical="true" android:paddingStart="24.0dip" android:paddingEnd="@dimen/common_left_right_margin" android:layout_alignParentEnd="true" />
    <ImageView android:id="@id/imageView_cancel" android:paddingBottom="18.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_delete" android:layout_centerVertical="true" android:contentDescription="@string/app_label" android:layout_marginEnd="24.0dip" android:layout_alignEnd="@id/rl_search" />
</RelativeLayout>